//add changes here
10/6/23:
    - Creating the base of the project

10/7/23-10/8/23:
